force-app/main/default/objects/GenerateCreditScoring__e/GenerateCreditScoring__e.object-meta.xml
<CustomObject>
    <label>Generate Credit Scoring</label>
    <pluralLabel>Generate Credit Scoring</pluralLabel>
</CustomObject>