force-app/main/default/objects/GenerateCreditScoring__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Account ID</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
    <description>The Salesforce Account ID the credit scoring was computed for.</description>
</CustomField>