force-app/main/default/objects/GenerateCreditScoring__e/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Text</type>
    <length>5</length>
    <required>true</required>
    <description>The credit scoring rating (AAA, AA, A, BBB, BB, B, CCC, or D).</description>
</CustomField>