force-app/main/default/objects/GenerateCreditScoring__e/fields/RiskCategory__c.field-meta.xml
<CustomField>
    <fullName>RiskCategory__c</fullName>
    <label>Risk Category</label>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
    <description>The risk category (Safe, Grey Zone, or Distress).</description>
</CustomField>