force-app/main/default/objects/GenerateCreditScoring__e/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>4</scale>
    <required>true</required>
    <description>The computed credit score value.</description>
</CustomField>